# runpod

./: Dockerfile  Makefile  README.md  pyproject.toml  rp_handler.py  s3_runpod.py
builder/: requirements.txt
endpoints/image/: Dockerfile
endpoints/image/src/: handler.py  main.py  model_loader.py
endpoints/image/src/builder/: requirements.txt
endpoints/text/: Dockerfile  test_input.json
endpoints/text/builder/: requirements.txt
endpoints/text/src/: handler.py  main.py  model_loader.py
endpoints/video/: Dockerfile  test_input.json
endpoints/video/builder/: requirements.txt
endpoints/video/src/: handler.py  main.py  model_loader.py
src/: handler.py
src/runpod_mistral/: __init__.py  __main__.py  handler.py
src/runpod_mistral.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
